Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33274

The test encryption.innodb-redo-nokeys often fails

    XMLWordPrintable

Details

    Description

      The test encryption.innodb-redo-nokeys often fails in various ways on 10.5 and later versions. On 10.4 I found a shutdown hang as well as SAFEMALLOC warnings on memory leaks, but nothing like this. Here are a few examples:

      10.11 d15260990d94258bca9eb2bae94159f6

      encryption.innodb-redo-nokeys 'cbc,innodb' w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2022-10-27 15:10:25
      line
      2022-10-27 15:10:21 0 [ERROR] InnoDB: Missing FILE_CHECKPOINT(72379) at 1561912
      2022-10-27 15:10:21 0 [ERROR] InnoDB: Log scan aborted at LSN 1561912
      

      10.5 8a763c014ede4adad9c84852269b5af61845c0d9

      encryption.innodb-redo-nokeys 'cbc,innodb' w21 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2024-01-12 16:33:53
      line
      2024-01-12 16:33:49 0 [ERROR] InnoDB: Missing FILE_CHECKPOINT at 1566925 between the checkpoint 53172 and the end 1632256.
      

      10.6 d06b6de3050180ec2f96ef00963d1beab8e1b47a

      encryption.innodb-redo-nokeys 'cbc,innodb' w3 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2024-01-11 04:20:08
      line
      2024-01-11  4:20:06 0 [ERROR] InnoDB: Missing FILE_CHECKPOINT at 1108630 between the checkpoint 52669 and the end 1174016.
      

      10.6 0f510d8b5a0089814edbadeebd68a1b83f8db9eb

      encryption.innodb-redo-nokeys 'cbc,innodb' w11 [ fail ]
              Test ended at 2023-12-14 12:09:14
       
      CURRENT_TEST: encryption.innodb-redo-nokeys
      --- /home/buildbot/amd64-ubuntu-2204-clang14-asan/build/mysql-test/suite/encryption/r/innodb-redo-nokeys.result	2023-12-14 11:52:21.000000000 +0000
      +++ /home/buildbot/amd64-ubuntu-2204-clang14-asan/build/mysql-test/suite/encryption/r/innodb-redo-nokeys.reject	2023-12-14 12:09:13.318204770 +0000
      @@ -40,6 +40,6 @@
       WHERE engine = 'innodb'
       AND support IN ('YES', 'DEFAULT', 'ENABLED');
       ENGINE	SUPPORT	COMMENT	TRANSACTIONS	XA	SAVEPOINTS
      -FOUND 1 /\[ERROR\] InnoDB: Encryption key is not found for .*test.t1.ibd/ in mysqld.1.err
      +NOT FOUND /\[ERROR\] InnoDB: Encryption key is not found for .*test.t1.ibd/ in mysqld.1.err
       # restart: --file-key-management-filename=MYSQL_TEST_DIR/std_data/keys2.txt
       drop table t1,t2,t3,t4,t5;
       
      mysqltest: Result length mismatch
      

      The redo logging and recovery was rewritten in MDEV-12353 and later refined in MDEV-14425.

      These failures need to be analyzed to determine the reason of the failure. Possibly we will need to improve the control of background writes, page flushing and the checkpoint activity, like we have done in the test innodb.doublewrite (MDEV-23855, MDEV-32242, MDEV-32968).

      Attachments

        Issue Links

          Activity

            People

              debarun Debarun Banerjee (Inactive)
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.